# udemy_fastAPI

./: auth_utils.py  database.py  main.py  pyproject.toml  schemas.py
routers/: route_auth.py  route_todo.py
