[tool.poetry]
name = "udemy-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "udemy_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.70.0"
uvicorn = "0.14.0"
fastapi-csrf-protect = "0.2.1"
motor = "2.5.1"
pyjwt = "2.3.0"
passlib = "1.7.4"
python-decouple = "3.3"
dnspython = "2.1.0"
gunicorn = "20.1.0"
bcrypt = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
